*Ginjo-Rfm 1.4.4

  Fixed creation of empty value list.
  
  Additional fixes for Rfm::VERSION.
  
  Other minor fixes and cleanup.
  
  Documentation cleanup.

*Ginjo-Rfm 1.4.3

	Fixed version management issue. Rfm::VERSION now works.

*Ginjo-Rfm 1.4.2

*	Re-implemented:
	
	Layout#field_controls
	
	Layout#value_lists
	
* Enhanced:

	ValueListItem handles both display & data items now.
	
	Timeout feature from timting (github/timting/rfm).
	
	Added specs for Record#save.
	
*	Fixed:

	[Bug] Getting & setting fields with symbol-based keys was producing error.
	
	[Bug] Setting fields would not update main record hash.
	
	[Bug] Record#save wasn't merging back into self.

*	Partial Fix:

	server.db.all
	db.layout.all
	db.script.all
	
	Note: the "#all" method returns object names (as keys) only. The receiver of the method maintains the full object collection.
	
	Example:
	
		server.db.all #=> ['dbname1', 'dbname2', ...]
		server.db     #=> a DbFactory object (descendant of Hash), containing 0 or more Database objects

*Lardawge-Rfm 1.4.2 (unreleased)*
  
* Made nil default on fields with no value.
  
    Example:
      
      Old: record.john #=> "" 
      New: record.john #=> nil
        
*Lardawge-Rfm 1.4.1.2*

* [Bug] Pointing out why testing is soooooo important when refactoring... Found a bug in getter/setter method in Rfm::Record (yes, added spec for it).

*Lardawge-Rfm 1.4.1.1*

* [Bug] Inadvertently left out an attr_reader for server from resultset effecting container urls.

*Lardawge-Rfm 1.4.1*

* Changed Server#do_action to Server#connect.

* XML Parsing is now done via xpath which significantly speeds up parsing.

* Changes to accessor method names for Resultset#portals Resultset#fields to Resultset#portal_meta and Resultset#field_meta to better describe what you get back.

* Added an option to load portal records which defaults to false. This significantly speeds up load time when portals are present on the layout.

    Example:
    